Force the cairo renderer for now

Ideally we'd be using the GL renderer everywhere, but seems like
Mesa does not enjoy when we use GLX and EGL simultaneously. When
EGL on X11 becomes a reality, let's revert this change.

Closes https://gitlab.gnome.org/GNOME/xdg-desktop-portal-gnome/-/issues/5